--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "user_guide"]
 	path = user_guide
-	url = https://github.com/appleboy/CodeIgniter-TW-Language
+	url = git@github.com:Rocchang/openerp_mobile.git
