--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "user_guide"]
 	path = user_guide
-	url = git@github.com:Rocchang/openerp_mobile.git
+	url = git@github.com:Rocchang/subtest.git
